Fix Thread.getId deprecation